# altv-capi

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: capi-gen.yml  main.yml
capi/: CMakeLists.txt  altv-capi-client.cpp  altv-capi-client.h  altv-capi-extra.cpp  altv-capi-extra.h  altv-capi-predefines.h  altv-capi-server.cpp  altv-capi-server.h  altv-capi-sourcedefs.hpp  build-debug.bat  build-win32.sh  build.bat  build.sh  gen-client.bat  gen-client.sh  gen-server.bat  gen-server.sh
capi/client/: CMakeLists.txt  altv-capi-extra.cpp  altv-capi-extra.h  altv-capi.ast  altv-capi.cpp  altv-capi.h  altv-capi.hpp  altv-capi.json
capi/server/: altv-capi.ast  altv-capi.cpp  altv-capi.h  altv-capi.hpp  altv-capi.json
cmake/: x64_win32.cmake
src/: CAPI.h  Function.hpp  Info.hpp  OLDSTUFF  Struct.hpp  Type.hpp  access.cpp  enum.cpp  fields.cpp  main.cpp  method.cpp  methods.cpp  record.cpp  record.hpp  regex.hpp  structs.cpp  templateAlias.cpp  templateClass.cpp  templateType.hpp  tool.hpp  typedef.cpp  util.hpp  utils.hpp
tools/: BUILD-NINJA-WIN.bat  GEN-NINJA-WIN.bat  NINJA-WIN-BUILD-RelWithDebInfo.bat  NINJA-WIN-BUILD.bat  NINJA-WIN-Debug-BUILD.bat  NINJA-WIN-Debug-GEN.bat  NINJA-WIN-GEN-RelWithDebInfo.bat  NINJA-WIN-GEN.bat  NINJA-WIN-RelWithDebInfo-BUILD.bat  NINJA-WIN-RelWithDebInfo-GEN.bat  NINJA-vs2019-RelWithDebInfo-BUILD.bat  NINJA-vs2019-RelWithDebInfo-GEN.bat  NINJA-vs2019c-RelWithDebInfo-BUILD.bat  NINJA-vs2019c-RelWithDebInfo-GEN.bat  NINJA-vs2019e-RelWithDebInfo-BUILD.bat  NINJA-vs2019e-RelWithDebInfo-GEN.bat  get-cppsdk.bat  get-cppsdk.sh  get-gen.bat  get-gen.sh
